tests/NormalTests/paczka1/fuzzy1/88830491.err
Error in line 1: FK2la A476 46,4
Error in line 8: FK2la A58 42,1
Error in line 20: FKJla A934 J7,J
Error in line 12: vvKOCXm A451 70,0
Error in line 21: rsRTWeIDg7a A451 33,9
Error in line 16: FK2la A476 52,7
Error in line 30: 6HHL A476 26,1
